crates/backyard-parser/tests/snapshots/dowhile__basic.snap
---
source: crates/backyard-parser/tests/dowhile.rs
expression: asts
snapshot_kind: text
---
node_type: program
children:
  - node_type: do_while
    condition:
      node_type: do_while_condition
      condition:
        node_type: boolean
        is_true: false
        loc:
          start:
            line: 2
            column: 9
            offset: 14
          end:
            line: 2
            column: 9
            offset: 14
        leadings: []
        trailings: []
      loc:
        start:
          line: 2
          column: 2
          offset: 7
        end:
          line: 2
          column: 9
          offset: 14
      leadings: []
      trailings: []
    body:
      node_type: block
      statements: []
      loc:
        start:
          line: 1
          column: 3
          offset: 3
        end:
          line: 2
          column: 0
          offset: 5
      leadings: []
      trailings: []
    loc:
      start:
        line: 1
        column: 0
        offset: 0
      end:
        line: 2
        column: 14
        offset: 19
    leadings: []
    trailings: []
loc:
  start:
    line: 1
    column: 0
    offset: 0
  end:
    line: 2
    column: 15
    offset: 20
leadings: []
trailings: []
