crates/backyard-parser/tests/snapshots/dowhile__separated_by_comment.snap
---
source: crates/backyard-parser/tests/dowhile.rs
expression: asts
snapshot_kind: text
---
node_type: program
children:
  - node_type: do_while
    condition:
      node_type: do_while_condition
      condition:
        node_type: boolean
        is_true: false
        loc:
          start:
            line: 4
            column: 7
            offset: 30
          end:
            line: 4
            column: 7
            offset: 30
        leadings: ~
        trailings: ~
      loc:
        start:
          line: 4
          column: 0
          offset: 23
        end:
          line: 4
          column: 7
          offset: 30
      leadings: ~
      trailings: ~
    body:
      node_type: block
      statements: []
      loc:
        start:
          line: 1
          column: 3
          offset: 3
        end:
          line: 2
          column: 0
          offset: 5
      leadings: ~
      trailings:
        - node_type: comment_line
          comment:
            - 32
            - 116
            - 104
            - 105
            - 115
            - 32
            - 99
            - 111
            - 109
            - 109
            - 101
            - 110
            - 116
          loc:
            start:
              line: 3
              column: 0
              offset: 7
            end:
              line: 3
              column: 0
              offset: 7
          leadings: ~
          trailings: ~
    loc:
      start:
        line: 1
        column: 0
        offset: 0
      end:
        line: 4
        column: 12
        offset: 35
    leadings: ~
    trailings: ~
loc:
  start:
    line: 1
    column: 0
    offset: 0
  end:
    line: 4
    column: 13
    offset: 36
leadings: ~
trailings: ~
